--- a/backend/Prac1/package.json
+++ b/backend/Prac1/package.json
@@ -1,15 +1,16 @@
 {
   "name": "node-express",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "PRACTICING PRACTICING PRACTICING",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ming Jung Lee",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
 }
