--- a/MERN Example/backend/package.json
+++ b/MERN Example/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Prac2",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,10 +8,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "https": "^1.0.0"
-  }
+  "license": "ISC"
 }
